@@ -11,7 +11,7 @@
   </parent>
 
   <artifactId>red-egg</artifactId>
-  <version>1-SNAPSHOT</version>
+  <version>2-SNAPSHOT</version>
 
 
   <properties>
@@ -102,7 +102,21 @@
       <optional>true</optional>
     </dependency>
 
+    <dependency>
+      <groupId>org.jboss.spec.javax.xml.ws</groupId>
+      <artifactId>jboss-jaxws-api_2.2_spec</artifactId>
+      <version>2.0.2.Final</version>
+      <scope>provided</scope>
+      <optional>true</optional>
+    </dependency>
 
+    <dependency>
+      <groupId>javax.jws</groupId>
+      <artifactId>jsr181-api</artifactId>
+      <version>1.0-MR1</version>
+      <scope>provided</scope>
+      <optional>true</optional>
+    </dependency>
 
 
 
@@ -152,6 +166,14 @@
       <scope>test</scope>
     </dependency>
 
+
+    <dependency>
+      <groupId>org.jboss.resteasy</groupId>
+      <artifactId>resteasy-jackson2-provider</artifactId>
+      <version>${resteasy.version}</version>
+      <scope>test</scope>
+    </dependency>
+
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
@@ -170,6 +192,13 @@
       <groupId>org.jboss.resteasy</groupId>
       <artifactId>resteasy-client</artifactId>
       <version>${resteasy.version}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-model-builder</artifactId>
+      <version>3.0.5</version>
       <scope>test</scope>
     </dependency>
 
@@ -241,13 +270,14 @@
           <plugin>
             <groupId>org.wildfly.plugins</groupId>
             <artifactId>wildfly-maven-plugin</artifactId>
-            <version>1.0.0.Beta1</version>
+            <version>1.0.1.Final</version>
             <configuration>
               <version>${wildfly.arquillian.version}</version>
               <jvmArgs>
                 -Djboss.management.http.port=${jboss.management.http.port}
                 -Djboss.management.native.port=${jboss.management.native.port}
                 -Djboss.http.port=${jboss.http.port}
+                -XX:MaxPermSize=512m
               </jvmArgs>
               <port>${jboss.management.http.port}</port>
             </configuration>
